# komet-node

./: .cruft.json  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  flake.nix  pyproject.toml
.claude/skills/writing-documentation/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  setup-git.sh
.github/scripts/: check-cachix-pin.sh
.github/workflows/: release.yml
docs/: architecture.md  interpreter.md  node-semantics.md  notes.md  server.md  transaction.md
nix/: README.md
nix/komet-node/: build-systems-overlay.nix  default.nix
nix/komet-node-pyk/: default.nix
src/komet_node/: __main__.py  demo.py  interpreter.py  scval.py  server.py  transaction.py  utils.py
src/komet_node/kdist/: fs.md  node.md  plugin.py
src/tests/integration/: test_integration.py  test_server.py
src/tests/integration/data/wasm/: add.wat  args.wat  empty.wat
src/tests/unit/: test_unit.py
