[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "komet-node"
version = "0.1.0"
description = "Local development testnet for Stellar based on K semantics"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "stellar-sdk>=13.2.1",
    "komet@git+https://github.com/runtimeverification/komet.git@v0.1.79",
    "kframework>=7.1.318,<7.1.321",
]

[[project.authors]]
name = "Runtime Verification, Inc."
email = "contact@runtimeverification.com"

[project.scripts]
komet-node = "komet_node.__main__:main"

[project.entry-points.kdist]
komet-node = "komet_node.kdist.plugin"

[dependency-groups]
dev = [
    "autoflake",
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-quotes",
    "flake8-type-checking",
    "isort",
    "mypy",
    "pep8-naming",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pyupgrade",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true
